--- a/pokedex.html
+++ b/pokedex.html
@@ -118,5 +118,11 @@
         </div>
       </div>
     </main>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
+    <script src="pokedex.js" type="text/javascript"></script>
+
+
+
   </body>
 </html>
